--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@ body{
  }
  
 .texo{
-    align-content: center;
+    position: absolute;
+    right: 440px;
+    padding: 25px;
+    font-size: x-large;
+    color: black;
 }
 
  .logo{
-    width: 4%;
+    width: 13%;
  }
