--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 body{
     color: white;
 }
@@ -13,6 +15,7 @@ body{
     padding: 25px;
     font-size: x-large;
     color: black;
+    font-family: "Inter", sans-serif;
 }
 .texto{
     position: absolute;
