--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     padding: 25px;
     font-size: x-large;
     color: black;
+    font-family: "Inter", sans-serif;
 }
  .logo{
     width: 13%;
