--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     font-size: x-large;
     color: black;
     font-family: "Inter", sans-serif;
+    text-decoration: underline;
 }
 .texto{
     position: absolute;
@@ -24,6 +25,7 @@ body{
     font-size: x-large;
     color: black;
     font-family: "Inter", sans-serif;
+    text-decoration: underline;
 }
  .logo{
     width: 13%;
