--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body{
 
  .título{
     text-align: center;
-    padding: 10px;
+    padding: 40px;
     color: black;
     font-family: "Inter", sans-serif;
+    font-style: italic;
  }
