--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ body{
     padding: 1px 2px;
     text-align: center;
     font-family: "Inter", sans-serif;
-  font-style: normal;
+    font-optical-sizing: auto;
+  font-weight: 100;
+
 }
 
