--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ body{
     text-align: center;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-  font-weight: 100;
+  font-weight: 240;
+  font-style: italic;
 
 }
 
