--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body{
  
 .color{
     color: black;
-    padding: 1px 2px;
+    padding: 75px 2px;
     text-align: center;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -67,4 +67,6 @@ body{
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
   font-weight: 400;
+  position: absolute;
+    padding: 2% 15%;
 }
