--- a/style.css
+++ b/style.css
@@ -70,3 +70,14 @@ body{
   position: absolute;
     padding: 2% 15%;
 }
+
+.título3{
+    display: flex;
+    padding: 10px;
+    color: black;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+  font-weight: 400;
+  position: absolute;
+    padding: 2% 15%;
+}
