--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
 
  .mato2{
     display: flex;
+    padding: 100px 10px;
  }
 
  .mato3{
@@ -82,7 +83,7 @@ body{
     font-optical-sizing: auto;
   font-weight: 400;
   position: absolute;
-    padding: 2% 15%;
+    padding: 8% 15%;
 }
 
 .título3{
