--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ body{
         display: flex;
         padding: 100px 10px;
      }
+
+     .mato7{
+        display: flex;
+     }
  
 .color{
     color: black;
@@ -141,5 +145,17 @@ body{
   font-weight: 400;
   position: absolute;
   padding: 8% 23%;
+  text-align: center;
+}
+
+.título7{
+    display: flex;
+    padding: 10px;
+    color: black;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+  font-weight: 400;
+  position: absolute;
+  padding: 0% 64%;
   text-align: center;
 }
