--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ body{
 
 .resu{
     display: flex;
-    padding: 10px;
+    padding: 5% 1%;
     color: black;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
