--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ body{
      .mato7{
         display: flex;
      }
+
+     .mato6{
+        display: flex;
+        padding: 100px 10px;
+     }
  
 .color{
     color: black;
@@ -157,6 +162,18 @@ body{
   font-weight: 400;
   position: absolute;
   padding: 0% 64%;
+  text-align: center;
+}
+
+.título8{
+    display: flex;
+    padding: 10px;
+    color: black;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+  font-weight: 400;
+  position: absolute;
+  padding: 8% 23%;
   text-align: center;
 }
 
