--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ body{
         display: flex;
         padding: 100px 10px;
      }
+
+     .mato9{
+      display: flex;
+   }
  
 .color{
     color: black;
@@ -175,6 +179,18 @@ body{
   position: absolute;
   padding: 6% 63%;
   text-align: center;
+}
+
+.título9{
+  display: flex;
+  padding: 10px;
+  color: black;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+font-weight: 400;
+position: absolute;
+padding: 0% 64%;
+text-align: center;
 }
 
 .resu{
