--- a/style.css
+++ b/style.css
@@ -213,3 +213,17 @@ body{
   font-style: italic;
     
 }
+
+.sumário{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+}
+
+.t{
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
