--- a/style.css
+++ b/style.css
@@ -227,3 +227,10 @@ body{
   left: 50%;
   transform: translate(-50%,-50%);
 }
+.e{
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
