--- a/style.css
+++ b/style.css
@@ -225,6 +225,8 @@ body{
   top: 2%;
   left: 50%;
   transform: translate(-50%,-50%);
+  font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
 }
 
 .t1{
