--- a/style.css
+++ b/style.css
@@ -281,8 +281,10 @@ body{
   display: flex;
      padding: 1px 20px;
      background-color: #3AC672;
+     position: relative;
+    bottom: -235px;
 }
 
 .logofim{
-
+  padding: 0% 44%;
 }
